local_development/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lmyc-frontend-service
  labels:
    app: lmyc-frontend-service
spec:
  selector:
    app: lmyc-frontend-container
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
